Chore: 'mean_normalization.ipynb' 수정
- 모델 훈련 및 예측 구현

--- a/notebook/mean_normalization.ipynb
+++ b/notebook/mean_normalization.ipynb
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,6 +1114,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_for_train = pd.concat([X_for_train, y_diff_for_train], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
    "outputs": [],
@@ -1121,6 +1130,163 @@
     "# 마지막 열의 이름을 rating으로 변경\n",
     "train_df.columns = list(train_df.columns[:-1]) + ['rating']\n",
     "valid_df.columns = list(valid_df.columns[:-1]) + ['rating']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_for_train.columns = list(df_for_train.columns[:-1]) + ['rating']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>isbn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2719</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>28656</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>37434</td>\n",
+       "      <td>4667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>38564</td>\n",
+       "      <td>32059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>16742</td>\n",
+       "      <td>42311</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76694</th>\n",
+       "      <td>67993</td>\n",
+       "      <td>126235</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76695</th>\n",
+       "      <td>68001</td>\n",
+       "      <td>141816</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76696</th>\n",
+       "      <td>68013</td>\n",
+       "      <td>133571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76697</th>\n",
+       "      <td>68024</td>\n",
+       "      <td>145168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76698</th>\n",
+       "      <td>68066</td>\n",
+       "      <td>91703</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>76699 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       user_id    isbn\n",
+       "0         2719      39\n",
+       "1        28656      39\n",
+       "2        37434    4667\n",
+       "3        38564   32059\n",
+       "4        16742   42311\n",
+       "...        ...     ...\n",
+       "76694    67993  126235\n",
+       "76695    68001  141816\n",
+       "76696    68013  133571\n",
+       "76697    68024  145168\n",
+       "76698    68066   91703\n",
+       "\n",
+       "[76699 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        6.857143\n",
+       "1        6.857143\n",
+       "2        8.000000\n",
+       "3        7.600000\n",
+       "4        7.571429\n",
+       "           ...   \n",
+       "76694    8.000000\n",
+       "76695    7.500000\n",
+       "76696    9.000000\n",
+       "76697    6.000000\n",
+       "76698    7.750000\n",
+       "Name: isbn_rating_mean, Length: 76699, dtype: float64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test_mean"
    ]
   },
   {
@@ -1150,7 +1316,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RatingsDataset(Dataset):\n",
+    "    def __init__(self, df):\n",
+    "        self.users = torch.tensor(df['user_id'].values, dtype=torch.long)\n",
+    "        self.items = torch.tensor(df['isbn'].values, dtype=torch.long)\n",
+    "        self.ratings = torch.tensor(df['rating'].values, dtype=torch.float32)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.ratings)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        return self.users[idx], self.items[idx], self.ratings[idx]\n",
+    "\n",
+    "train_dataset = RatingsDataset(df_for_train)\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1183,29 +1372,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "num_users = len(data['label2idx']['user_id'])\n",
     "num_items = len(data['label2idx']['isbn'])\n",
-    "embedding_dim = 32  # 임베딩 차원 크기, 필요에 따라 조정\n",
+    "embedding_dim = 16  # 임베딩 차원 크기, 필요에 따라 조정\n",
     "\n",
     "model = MatrixFactorization(num_users, num_items, embedding_dim)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, Training Loss: 12.77199574251895\n",
+      "Epoch 2, Training Loss: 5.867089594857713\n",
+      "Epoch 3, Training Loss: 4.67196586861131\n",
+      "Epoch 4, Training Loss: 4.452914923889517\n",
+      "Epoch 5, Training Loss: 3.9122881164737775\n",
+      "Epoch 6, Training Loss: 3.6800781438685877\n",
+      "Epoch 7, Training Loss: 3.446075886574993\n",
+      "Epoch 8, Training Loss: 3.281334041952341\n",
+      "Epoch 9, Training Loss: 3.155237391982717\n",
+      "Epoch 10, Training Loss: 3.0241582537373755\n",
+      "Epoch 11, Training Loss: 2.945221598714304\n",
+      "Epoch 12, Training Loss: 2.847526587070303\n",
+      "Epoch 13, Training Loss: 2.7915063499409705\n",
+      "Epoch 14, Training Loss: 2.6966823228309686\n",
+      "Epoch 15, Training Loss: 2.662027607324176\n",
+      "Epoch 16, Training Loss: 2.5969815198759463\n",
+      "Epoch 17, Training Loss: 2.5730092145275663\n",
+      "Epoch 18, Training Loss: 2.511145027170193\n",
+      "Epoch 19, Training Loss: 2.49093701208339\n",
+      "Epoch 20, Training Loss: 2.439613934079458\n",
+      "Epoch 21, Training Loss: 2.421778993975584\n",
+      "Epoch 22, Training Loss: 2.3718247465357267\n",
+      "Epoch 23, Training Loss: 2.3687169763213354\n",
+      "Epoch 24, Training Loss: 2.3157482997148695\n",
+      "Epoch 25, Training Loss: 2.320964604181004\n"
+     ]
+    }
+   ],
    "source": [
     "import torch.optim as optim\n",
     "\n",
     "criterion = nn.MSELoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.01)\n",
     "\n",
-    "num_epochs = 10  # 필요한 만큼 설정\n",
+    "num_epochs = 25  # 필요한 만큼 설정\n",
     "\n",
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
@@ -1217,16 +1438,62 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        train_loss += loss.item()\n",
-    "    print(f\"Epoch {epoch+1}, Training Loss: {train_loss / len(train_loader)}\")\n",
-    "    \n",
-    "    model.eval()\n",
-    "    valid_loss = 0\n",
-    "    with torch.no_grad():\n",
-    "        for user, item, rating in valid_loader:\n",
-    "            prediction = model(user, item) + y_valid_diff\n",
-    "            loss = criterion(prediction, y_valid)\n",
-    "            valid_loss += loss.item()\n",
-    "    print(f\"Epoch {epoch+1}, Validation Loss: {valid_loss / len(valid_loader)}\")"
+    "    print(f\"Epoch {epoch+1}, Training Loss: {train_loss / len(train_loader)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# X_test에 rating 열을 추가\n",
+    "X_test['rating'] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test 데이터에 대한 예측값 생성 (sample_submission.csv 사용)\n",
+    "test_dataset = RatingsDataset(X_test)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=64, shuffle=False)\n",
+    "\n",
+    "model.eval()\n",
+    "predictions = []\n",
+    "for user, item, _ in test_loader:\n",
+    "    prediction = model(user, item)\n",
+    "    predictions.extend(prediction.tolist())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_submission = pd.read_csv('./data/sample_submission.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sample_submission에 rating 열을 예측값으로 대체\n",
+    "sample_submission['rating'] = predictions + X_test_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_submission.to_csv('./data/submission.csv', index=False)"
    ]
   }
  ],
